--- a/.github/workflows/build-cmake.yml
+++ b/.github/workflows/build-cmake.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        arch: ['i686', 'x86_64', 'ucrt-x86_64']
+        arch: ['i686', 'x86_64', 'ucrt-x86_64', 'clang-x86_64']
         shared_libs: ['shared', 'static']
         include:
           - arch: i686
@@ -27,6 +27,8 @@ jobs:
             msystem: MINGW64
           - arch: ucrt-x86_64
             msystem: UCRT64
+          - arch: clang-x86_64
+            msystem: CLANG64
 
     defaults:
       run:
